src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>CRM_WF_Numero_de_Briefs__c</fullName>
        <label>Número de Briefs</label>
        <summaryForeignKey>CRM_WF_Brief__c.CRM_WF_Campana_Brief__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Numero_de_Cartas_Origen_Aprobadas__c</fullName>
        <label>Número de Cartas Origen Aprobadas</label>
        <summaryFilterItems>
            <field>CRM_WF_Cartas_Origen__c.CRM_WF_Etapa_Carta_Custodia__c</field>
            <operation>equals</operation>
            <value>Aprobada</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_WF_Cartas_Origen__c.CRM_WF_Campana_Carta_Custodia__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Numero_de_Modificaciones__c</fullName>
        <inlineHelpText>Total de modificaciones solicitadas en la Campaña</inlineHelpText>
        <label>Número de Modificaciones</label>
        <summaryForeignKey>CRM_WF_Modificacion__c.CRM_WF_Campana__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Objetivos__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Objetivos</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Oferta_Clientes__c</fullName>
        <label>Oferta Clientes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Oferta_Grupo_Control__c</fullName>
        <label>Oferta Grupo Control</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_On_Boarding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Boarding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Otra_Area_Solicitante__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Otra área solicitante</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Otro__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Otro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Otros_Sembrados__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Otros Sembrados</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CRM_WF_PYME_Micro__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PYME Micro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_PYME_Negocios__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PYME Negocios</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Patrimonial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Patrimonial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Personal_Plus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Personal Plus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Personal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Personal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Portal_Vida_Bancomer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Portal Vida Bancomer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Pre_Aprobado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre Aprobado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Prioridad_del__c</fullName>
        <label>Prioridad</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                    <default>true</default>
                    <label>Normal</label>
                </value>
                <value>
                    <fullName>Solicitud de Urgencia</fullName>
                </value>
                <value>
                    <fullName>Urgente</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Privado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Privado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Promoci_n_es__c</fullName>
        <description>Campo para la aplicación Workflow ubicado en el page layout de Alianzas Comerciales, se selecciona de acuerdo al valor de un multipicklist</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Promoción(es)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Propuesta_De_Valor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Propuesta de Valor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Push_Notification_Requiere__c</fullName>
        <description>Campo para la aplicación Workflow ubicado en el page layout de Alianzas Comerciales, se selecciona de acuerdo al valor de un multipicklist</description>
        <formula>INCLUDES ( CRM_WF_Canales_de_Comunicacion__c , &quot;Push Notification&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Push Notification ¿Requiere?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Push_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Push Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_RRSS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RRSS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Recurrencia__c</fullName>
        <label>Recurrencia</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Única Vez</fullName>
                </value>
                <value>
                    <fullName>Semanal</fullName>
                </value>
                <value>
                    <fullName>Quincenal</fullName>
                </value>
                <value>
                    <fullName>Mensual</fullName>
                </value>
                <value>
                    <fullName>Bimestral</fullName>
                </value>
                <value>
                    <fullName>Trimestral</fullName>
                </value>
                <value>
                    <fullName>Semestral</fullName>
                </value>
                <value>
                    <fullName>Anual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Redes_Sociales_Dirigidas_Requiere__c</fullName>
        <description>Campo para la aplicación Workflow ubicado en el page layout de Alianzas Comerciales, se selecciona de acuerdo al valor de un multipicklist</description>
        <formula>INCLUDES ( CRM_WF_Canales_de_Comunicacion__c , &quot;Redes Sociales Dirigidas&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Redes Sociales Dirigidas ¿Requiere?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Redes_Sociales_Masivas_Requiere__c</fullName>
        <description>Campo para la aplicación Workflow ubicado en el page layout de Alianzas Comerciales, se selecciona de acuerdo al valor de un multipicklist</description>
        <formula>INCLUDES ( CRM_WF_Canales_de_Comunicacion__c , &quot;Redes Sociales Masivas&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Redes Sociales Masivas ¿Requiere?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Registro_Duplicado__c</fullName>
        <description>Valida si existe otra Campaña con el mismo nombre</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Registro Duplicado</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CRM_WF_Requiere_Brief__c</fullName>
        <label>¿Requiere Brief?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Requiere_Carta_Origen__c</fullName>
        <label>¿Requiere Carta Origen?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Responsable_No_Squad__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Responsable</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_SMS_Requiere__c</fullName>
        <description>Campo para la aplicación Workflow ubicado en el page layout de Alianzas Comerciales, se selecciona de acuerdo al valor de un multipicklist</description>
        <formula>INCLUDES ( CRM_WF_Canales_de_Comunicacion__c , &quot;SMS&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SMS ¿Requiere?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_SMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Sdat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sdat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Segmento__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Segmento</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Semb_predeterminados__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sembrados predeterminados</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Soporte_Tel__c</fullName>
        <label>Soporte Tel.</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Comercio</fullName>
                </value>
                <value>
                    <fullName>Comercio y L. Bcomer</fullName>
                </value>
                <value>
                    <fullName>Línea Bancomer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_TDC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TDC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_TDD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TDD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_TPV__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TPV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Tdc_Abono_Puntos__c</fullName>
        <label>TDC abono puntos</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Telemarketing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Telemarketing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Terminos_Y_Condiciones__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Términos y Condiciones</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Tipo_De_Area_Solicitante__c</fullName>
        <label>Tipo de área solicitante</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Squad</fullName>
                </value>
                <value>
                    <fullName>No Squad</fullName>
                    <label>No Squad / Marketing</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Tipo_De_TIER__c</fullName>
        <label>Tipo de TIER</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TIER I</fullName>
                </value>
                <value>
                    <fullName>TIER II</fullName>
                </value>
                <value>
                    <fullName>TIER III</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Tipo_Nombre_de_la_Tarjeta__c</fullName>
        <description>Campo para la aplicación Workflow ubicado en el page layout de Alianzas Comerciales, se selecciona de acuerdo al valor de un multipicklist</description>
        <label>Tipo / Nombre de la Tarjeta</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Crédito - Azul</fullName>
                </value>
                <value>
                    <fullName>Crédito - Educación</fullName>
                </value>
                <value>
                    <fullName>Crédito - Infinite</fullName>
                </value>
                <value>
                    <fullName>Crédito - UNAM</fullName>
                </value>
                <value>
                    <fullName>Crédito - IPN</fullName>
                </value>
                <value>
                    <fullName>Crédito - Oro</fullName>
                </value>
                <value>
                    <fullName>Crédito - Platinum</fullName>
                </value>
                <value>
                    <fullName>Crédito - Rayados</fullName>
                </value>
                <value>
                    <fullName>Crédito - Vive</fullName>
                </value>
                <value>
                    <fullName>Crédito - Mi Primera Tarjeta</fullName>
                </value>
                <value>
                    <fullName>Crédito Digital - Crédito Digital Visa</fullName>
                </value>
                <value>
                    <fullName>Crédito Digital - Crédito Digital Mastercard</fullName>
                </value>
                <value>
                    <fullName>Crédito Digital - Crédito Sticker</fullName>
                </value>
                <value>
                    <fullName>Débito - Débito Patrimonial</fullName>
                </value>
                <value>
                    <fullName>Débito - Débito Oro</fullName>
                </value>
                <value>
                    <fullName>Débito - Libretón</fullName>
                </value>
                <value>
                    <fullName>Débito - Cuenta Express</fullName>
                </value>
                <value>
                    <fullName>Crédito - Congelada</fullName>
                </value>
                <value>
                    <fullName>Débito Digital - Débito Digital Visa</fullName>
                </value>
                <value>
                    <fullName>Débito Digital - Débito Digital Mastercard</fullName>
                </value>
                <value>
                    <fullName>Débito Digital - Débito Sticker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_UHN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UHN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_URL_Bines_y_Afiliaciones__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Afiliaciones</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Ventanilla__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ventanilla</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Vinculacion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vinculación</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Wallet_Loyalty_Mapa__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wallet Loyalty Mapa</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Wallet_Loyalty_Push_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wallet Loyalty Push Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Asesor_Comercial__c</fullName>
        <description>Campo para la aplicación Workflow, que trae el valor del Asesor comercial a la Campaña</description>
        <formula>GBL_WF_Comercios__r.GBL_WF_Asesor_Comercial__r.FirstName &amp; &quot; &quot; &amp; GBL_WF_Comercios__r.GBL_WF_Asesor_Comercial__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asesor Comercial</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Comercios__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campo para la aplicación Workflow, que busca y relaciona un Comercio a la cuenta</description>
        <label>Comercio</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Comercios</value>
            </filterItems>
            <filterItems>
                <field>Account.GBL_WF_Vigente__c</field>
                <operation>equals</operation>
                <value>Sí</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campañas</relationshipLabel>
        <relationshipName>Campa_as</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Giro_Comercial__c</fullName>
        <description>Campo para la aplicación Workflow, que trae el valor del Giro comercial a la Campaña</description>
        <formula>TEXT ( GBL_WF_Comercios__r.GBL_WF_Giro_Comercial__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Giro Comercial</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Tipo_de_TIER__c</fullName>
        <description>Campo para la aplicación Workflow, que trae el valor del Tipo de TIER a la Campaña</description>
        <formula>TEXT ( GBL_WF_Comercios__r.GBL_WF_Tier__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo de TIER</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_PYME_Productos__c</fullName>
        <description>Productos Seleccionados para la Oportunidad</description>
        <label>Productos</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Agencia Houston Cheques</fullName>
                </value>
                <value>
                    <fullName>Ahorro</fullName>
                </value>
                <value>
                    <fullName>Ahorro Liquido</fullName>
                </value>
                <value>
                    <fullName>Alertas</fullName>
                </value>
                <value>
                    <fullName>Alianzas Comerciales</fullName>
                </value>
                <value>
                    <fullName>Aplinet</fullName>
                </value>
                <value>
                    <fullName>Arrendamiento Financiero</fullName>
                </value>
                <value>
                    <fullName>Arrendamiento Puro</fullName>
                </value>
                <value>
                    <fullName>Asset Management Gestión Terceros</fullName>
                </value>
                <value>
                    <fullName>Asset Management Previsión Social</fullName>
                </value>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>Auto Flotilla Única</fullName>
                </value>
                <value>
                    <fullName>Auto Seguro</fullName>
                </value>
                <value>
                    <fullName>Banca Electrónica PyME</fullName>
                </value>
                <value>
                    <fullName>Bancomer.com</fullName>
                </value>
                <value>
                    <fullName>Bancomer Net Cash</fullName>
                </value>
                <value>
                    <fullName>Bonds (Garantías)</fullName>
                </value>
                <value>
                    <fullName>Cadenas NAFIN</fullName>
                </value>
                <value>
                    <fullName>Cajeros Automáticos (ATMs)</fullName>
                </value>
                <value>
                    <fullName>Cambios</fullName>
                </value>
                <value>
                    <fullName>Cartas de Crédito</fullName>
                </value>
                <value>
                    <fullName>Cartas de Crédito PyME</fullName>
                </value>
                <value>
                    <fullName>Cheque</fullName>
                </value>
                <value>
                    <fullName>Cheques</fullName>
                </value>
                <value>
                    <fullName>Cheques cuenta de grupo / GL</fullName>
                </value>
                <value>
                    <fullName>Ciclos de Vida/ Previsión Social</fullName>
                </value>
                <value>
                    <fullName>CIE Electrónico</fullName>
                </value>
                <value>
                    <fullName>CIE PyME</fullName>
                </value>
                <value>
                    <fullName>CIE Ventanilla</fullName>
                </value>
                <value>
                    <fullName>Cobertura/Renta Variable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_FamiliaProducto_Proveedor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Campo relación para filtrar familia de productos autorizada por proveedor</description>
        <inlineHelpText>Ramo al que pertenece la campaña</inlineHelpText>
        <label>Familia de producto</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>MX_SB_VTS_FamliaProveedores__c.MX_SB_VTS_Identificador_Proveedor__c</field>
                <operation>equals</operation>
                <valueField>$User.MX_SB_VTS_ProveedorCTI__c</valueField>
            </filterItems>
            <filterItems>
                <field>MX_SB_VTS_FamliaProveedores__c.Owner:User.Id</field>
                <operation>equals</operation>
                <valueField>$User.Id</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>MX_SB_VTS_FamliaProveedores__c</referenceTo>
        <relationshipLabel>Campañas</relationshipLabel>
        <relationshipName>Campa_as</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Familia_Producto__c</fullName>
        <formula>MX_SB_VTS_FamiliaProducto_Proveedor__r.MX_SB_VTS_Familia_de_productos__c</formula>
        <label>Familia Producto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_IdentificadorCampaign__c</fullName>
        <formula>TEXT(YEAR(TODAY()))+ TEXT(MONTH(TODAY())) + TEXT(DAY(TODAY())) +MX_SB_VTS_Identificador__c</formula>
        <label>Identificador</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Identificador__c</fullName>
        <description>Conjunto de caracteres que identifican a la carga formado por:
Día, mes, año primeras 2 letras del proveedor, primer letra de familia de producto y folio </description>
        <displayFormat>C-{00000}</displayFormat>
        <inlineHelpText>Conjunto de caracteres que identifican a la carga formado por:
Día, mes, año primeras 2 letras del proveedor, primer letra de familia de producto y folio </inlineHelpText>
        <label>Identificador</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_NombreProveedorCTI__c</fullName>
        <description>Campo para identificador de Proveedor</description>
        <formula>TEXT(MX_SB_VTS_FamiliaProducto_Proveedor__r.MX_SB_VTS_ProveedorCTI__r.MX_SB_VTS_Identificador_Proveedor__c)</formula>
        <label>Nombre ProveedorCTI</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Segmentada__c</fullName>
        <description>Valida el valor del segmentado del provedor</description>
        <formula>MX_SB_VTS_FamiliaProducto_Proveedor__r.MX_SB_VTS_ProveedorCTI__r.MX_SB_VTS_TieneSegmento__c</formula>
        <label>Segmentada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Segmentado__c</fullName>
        <description>El proveedor es segmentado.</description>
        <formula>MX_SB_VTS_FamiliaProducto_Proveedor__r.MX_SB_VTS_ProveedorCTI__r.MX_SB_VTS_TieneSegmento__c</formula>
        <label>MX_SB_VTS_Segmentado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Tipo_Campana__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campo para tener campañas diferenciadas por Tipo ejemplo Base fria</description>
        <inlineHelpText>Se refiere al tipo de campaña de donde proviene la BBDD o registros </inlineHelpText>
        <label>Origen</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>MX_SB_VTS_TipoCampana__c.Activa__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>MX_SB_VTS_TipoCampana__c</referenceTo>
        <relationshipLabel>Campañas</relationshipLabel>
        <relationshipName>Campa_as</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_WB_FamiliaProductos__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Familia de productos</label>
        <referenceTo>MX_WB_FamiliaProducto__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_WB_Producto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Producto</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Campañas</relationshipLabel>
        <relationshipName>Campanas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_WB_lst_ProductoInteres__c</fullName>
        <description>Nuevo campo de producto interés para tele marketing</description>
        <label>Producto de Interés</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ahorro Liquido</fullName>
                </value>
                <value>
                    <fullName>Alertas</fullName>
                </value>
                <value>
                    <fullName>Alianzas Comerciales</fullName>
                </value>
                <value>
                    <fullName>Aplinet</fullName>
                </value>
                <value>
                    <fullName>Seguro de Moto Bancomer</fullName>
                </value>
                <value>
                    <fullName>Seguro de auto fronterizo Bancomer</fullName>
                </value>
                <value>
                    <fullName>Seguro de auto nacionalizado</fullName>
                </value>
                <value>
                    <fullName>Auto seguro Dinamico</fullName>
                    <label>Auto seguro Dinámico</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_WF_API_tipo_de_registro__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API tipo de registro</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WF_Anio_campa_a_multipromoci_n__c</fullName>
        <label>Año campaña multipromoción</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_WF_Bines_que_participan__c</fullName>
        <description>Campo para la aplicación WF, alamacena la información de los bines que participan en una campaña para poder enviar la información a Datio</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Bines que participan</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MX_WF_Bitly_de_la_promoci_n__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bitly de la promoción</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WF_Bonificacion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo para la aplicación wf. Permite informar cuando la promoción contiene el beneficio de Bonificación de esa forma poder informarlo en los canales relacionados para que Datio pueda ejecutar los jobs que corresponden con el beneficio</description>
        <label>Bonificación</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_CTA__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CTA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WF_Campa_a_es_regional__c</fullName>
        <description>Campo para la aplicación WF, permite determinar si una campaña es regional o no para poder filtrar en el componente Lista campañas</description>
        <formula>IF(  LEN(CRM_WF_URL_Bines_y_Afiliaciones__c ) = 0 , &quot;No&quot;, &quot;Sí&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaña es regional</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WF_Canales_Comunicacion_no_Dirigida__c</fullName>
        <description>Lista de selección múltiple para la aplicación Wallet que es rellenada por los Asesores Comerciales</description>
        <label>Canales Comunicación no Dirigida</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mundo TDC</fullName>
                </value>
                <value>
                    <fullName>Marketing Dinámico</fullName>
                </value>
                <value>
                    <fullName>Prensa</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>Menciones en Radio</fullName>
                </value>
                <value>
                    <fullName>Menciones en Televisión</fullName>
                </value>
                <value>
                    <fullName>Comunicación Interna</fullName>
                </value>
                <value>
                    <fullName>BBVA Wallet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_WF_Correo_electronico_del_lider__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Correo electrónico del líder</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MX_WF_Descuento__c</fullName>
	<description>Campo para la aplicación wf. Permite informar cuando la promoción contiene el beneficio de Descuento de esa forma poder informarlo en los canales relacionados para que Datio pueda ejecutar los jobs que corresponden con el beneficio.</description>
        <defaultValue>false</defaultValue>
        <label>Descuento</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Enviar_alerta_de_correo_Adquirente__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enviar alerta de correo a Adquirente</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_F_rmula_id_tipo_de_registro_txt__c</fullName>
        <formula>RecordType.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fórmula id tipo de registro txt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WF_Fecha_de_Creacion_Real__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha de Creación Real</label>
        <type>Date</type>
    </fields>
</CustomObject>